<resources>
    <string name="app_name" translatable="false">Food Decider</string>
    <string name="type_new_food">Type new food</string>
    <string name="app_logo">app logo</string>
    <string name="decide">Decide!</string>
    <string name="add_food">Add food</string>
    <string name="the_list_is_empty">The list is empty</string>
    <string name="list">List:</string>
    <string name="empty_list">You don\'t have any food/restaurant. Please add something.</string>
    <string name="change_doesnt_save">If you have made any changes you must save them!</string>
    <string name="back">Back</string>
    <string name="already_added">This food has already been added.</string>
    <string name="empty_string">Please type something.</string>
    <string name="toggle_menu">toggle menu</string>
    <string name="home_page">Home page</string>
    <string name="list_of_dishes">List of dishes</string>
    <string name="change_language">Change language</string>
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="do_you_have_dinner">Have you already chosen your dinner?</string>
    <string name="i_go_out">Yes! Thank you :)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="free_account">The account is completely free!</string>
    <string name="hello_header">Welcome to FoodDecider! To fully use the application\'s functions you must have an account.</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sing up</string>
    <string name="logout">Logout</string>
    <string name="templates">Templates</string>
    <string name="already_in_yor_list">Already in yor list</string>
    <string name="add_to_your_list">Add to your list</string>
    <string name="dont_have_account">You do not have an account? Sing up</string>
    <string name="have_account">Do you have an account? Sign in</string>
    <string name="you_add_everything_from_this_list">You add everything from this list</string>
    <string name="it_all_right">Everything is fine</string>
    <string name="continue_play"><![CDATA[You can keep going :)]]></string>
    <string name="back_to_main_screen">Back to main screen</string>
    <string name="try_again_later">Please try again later</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="email_error">Email address has the wrong format</string>
    <string name="password_error">The password should be at least 6 characters, have uppercase and lowercase letters, and at least one number and special character (! @ # $ % ^ &amp; * . ?)</string>
    <string name="passwords_match_error">Passwords are not the same</string>
</resources>
